--- a/style.css
+++ b/style.css
@@ -102,6 +102,16 @@ li {
     padding: .5rem;
 }
 
+@media screen and (max-width: 550px) {
+    #mobile-menu-button {
+        display: block;
+    }
+
+    nav {
+        display: none;
+    }
+}
+
 /* Grinder Section */
 
 #animation-pause {
